// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XCM tests for Mangata <-> Statemine [RMRK] mangata transfer assets to statemine 1`] = `
{
  "free": 9900000000000,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`XCM tests for Mangata <-> Statemine [RMRK] mangata transfer assets to statemine 2`] = `
{
  "balance": 10099999281400,
  "extra": null,
  "reason": {
    "consumer": null,
  },
  "status": "Liquid",
}
`;

exports[`XCM tests for Mangata <-> Statemine [RMRK] mangata transfer assets to statemine: system events 1`] = `[]`;

exports[`XCM tests for Mangata <-> Statemine [RMRK] statemine transfer assets to mangata 1`] = `
{
  "balance": 9900000000000,
  "extra": null,
  "reason": {
    "consumer": null,
  },
  "status": "Liquid",
}
`;

exports[`XCM tests for Mangata <-> Statemine [RMRK] statemine transfer assets to mangata 2`] = `
{
  "free": 10099935488000,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`XCM tests for Mangata <-> Statemine [RMRK] statemine transfer assets to mangata: system events 1`] = `[]`;

exports[`XCM tests for Mangata <-> Statemine mangata transfer assets to statemine 1`] = `
{
  "free": 990000000,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`XCM tests for Mangata <-> Statemine mangata transfer assets to statemine 2`] = `
{
  "balance": 1009992814,
  "extra": null,
  "reason": {
    "consumer": null,
  },
  "status": "Liquid",
}
`;

exports[`XCM tests for Mangata <-> Statemine mangata transfer assets to statemine: system events 1`] = `[]`;

exports[`XCM tests for Mangata <-> Statemine statemine transfer assets to mangata 1`] = `
{
  "balance": 990000000,
  "extra": null,
  "reason": {
    "consumer": null,
  },
  "status": "Liquid",
}
`;

exports[`XCM tests for Mangata <-> Statemine statemine transfer assets to mangata 2`] = `
{
  "free": 1009989920,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`XCM tests for Mangata <-> Statemine statemine transfer assets to mangata: system events 1`] = `[]`;
